# Capstone-D1-Arm

./: CMakeLists.txt  README.md  d1_kinematics.xml
script/: ik_solver.py
src/: d1_controller.hpp  d1_pick_xyz.cpp  deploy.cpp  kinematics.hpp
